added search_help html

--- a/main/apps/nip/templates/nip/profile.html
+++ b/main/apps/nip/templates/nip/profile.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Ninja profile: {Name}</title>
-	<link rel="stylesheet" type="text/css" href="profile.css">
+	<link rel="stylesheet" type="text/css" href="../../static/profile.css">
 </head>
 <body>
 	<div class="header">
