--- a/main/apps/nip/templates/nip/registration.html
+++ b/main/apps/nip/templates/nip/registration.html
@@ -74,7 +74,19 @@
                      <input id="button" type="submit" value="Create">
                 </form>
             </div>
-
+            <div class="question-5">
+                <p>Do you want to teach other students?</p>
+                <form action="#" method="POST">
+                    <input type="radio" class="radioButton" name="instructor">
+                    Yes
+                    <input type="radio" class="radioButton" name="student">
+                    No
+                </form>
+            </div>
+        </div>
+        <div class="bottom-submit">
+            <p>Awesome! Time to fill out strengths!</p>
+            <input type="submit" value="Let's Go!">
         </div>
     </div>
 </body>
