--- a/main/apps/nip/templates/nip/registration.html
+++ b/main/apps/nip/templates/nip/registration.html
@@ -77,9 +77,9 @@
             <div class="question-5">
                 <p>Do you want to teach other students?</p>
                 <form action="#" method="POST">
-                    <input type="radio" class="radioButton" name="instructor">
+                    <input type="radio" class="radioButton" name="yes">
                     Yes
-                    <input type="radio" class="radioButton" name="student">
+                    <input type="radio" class="radioButton" name="no">
                     No
                 </form>
             </div>
