--- a/main/apps/nip/templates/nip/login.html
+++ b/main/apps/nip/templates/nip/login.html
@@ -7,30 +7,44 @@
     <title>Welcome Ninjas!</title>
 </head>
 <body>
-    <div class=header>
+    <div class="header">
         <h1>NIP</h1>
-        <form action=/process method=post>
+        {% if messages %}
+            {% for message in messages %}
+                <p>{{message}}</p>
+            {%endfor%}
+        {%endif%}
+        <form action="/login" method="post">
             {% csrf_token %}
-            <input type=hidden name=action value=login>
-            <label for=email>email:</label>
-            <input type=text name=email>
-            <label for=password>password:</label>
-            <input type=password name=password>
-            <input type=submit name=submit value=login>
+            <input type="hidden" name="action" value="login">
+            <label for="email">email:</label>
+            <input type="text" name="email">
+            <label for="password">password:</label>
+            <input type="password" name="password">
+            <input type="submit" name="submit" value="login">
         </form>
     </div>
-    <div class=body>
+    <div class="body">
         <h1>Welcome Ninjas!</h1>
         <h3>Make a free account</h3>
-        <form action=/process method=post>
+        
+        <form action="/new_user" method="post">
             {% csrf_token %}
-            <input type=hidden name=action value=reg>
-            <input type=text name=first_name value="first name">
-            <input type=text name=last_name value="last name">
-            <input type=text name=email value="email address">
-            <input type=password name=password value="password">
-            <input type=confirm name=confirm value="confirm password">
-            <input type=submit name=submit value="Create Account">
+            <input type="hidden" name="action" value="reg">
+            <br>
+            First Name: <input type="text" name="first_name">
+            <br>
+            Last Name: <input type="text" name="last_name">
+            <br>
+            Email: <input type="text" name="email">
+            <br>
+            Profile picture: <input type="text" name="picture">
+            <br>
+            Password: <input type="password" name="password">
+            <br>
+            Confirm Password: <input type="password" name="confirm" >
+            <br>
+            <input type="submit" name="submit" value="Create Account">
         </form>
     </div>
     
