--- a/main/apps/nip/templates/nip/user_search.html
+++ b/main/apps/nip/templates/nip/user_search.html
@@ -5,58 +5,97 @@
     <meta charset="UTF-8">
     <title>NIP</title>
 </head>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-    // $('#who').click(function () {
-    //     $('.site_search_who').toggle("slow");
-    // });
-</script>
 <style>
     * {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
 
     .email {
 
         display: inline-block;
         margin-left: 50px;
-        margin-top: 20px;
+        /* margin-top: 20px; */ 
         width: 90px;
         padding: 10px;
         border-radius: 10px;
         font-size: 20px;
-    }
+    } 
 
-    h1,
-    h2 {
+    .profile, .logout {
         display: inline;
+
+    }
+    .profile{
+        margin-left: 600px;
+        margin-right:40px;
     }
 
     h1 {
         margin-right: 500px;
     }
 
-    h4,
-    img {
+    h4,img {
         display: inline-block;
     }
 
-    img {
-        width: 50px;
-        height: 50px;
+    .header {
+        height: 30px;
+        display: inline-block;
+        vertical-align: top;
+        padding:30px;
     }
+    .logo{
+        height:90px;
+    }
+
+    .main_content{
+        /* width:700px; */
+        margin-top:50px;
+        margin-left:300px;
+    }
+
+    .profile_pic{
+        height:100px;
+        margin-top:10px;
+    }
+    .user_name{
+        display:inline-block;
+        vertical-align: top;
+    }
+    .search_result{
+        padding-bottom:10px;
+        display: inline-block;
+        text-align:center;
+        font-size: 30px;
+        height:90px;
+        font-size:40px;
+        /* width:400px; */
+
+    }
+
+
 </style>
 
 <body>
+    
+    <img class ="logo" src="https://mir-cdn.behance.net/v1/rendition/project_modules/disp/70702f63826029.5abd519e04f31.png" alt="nip_logo"/>
     <div class="header">
-        <img src="/nip/nip_logo.jpg" alt="nip_logo"/>
-        <h2>Profile</h2>
-        <h2>Logout</h2>
+        <h2 class="profile">Profile</h2>
+        <h2 class="logout">Logout</h2>
     </div>
     <div class="main_content">
-        <h3>Search Results: {{ search.tutor }}</h3>
+        <p class="search_results">Search Results: Find Someone</p>
+
+        <!-- JUST FOR SHOW -->
+        <div class="search_result"></div>
+        <img class="profile_pic" src="https://www.shareicon.net/data/128x128/2016/07/10/119669_people_512x512.png" alt="profile_pic">
+        
+            <p ><a class="user_name" href="user.profile">Sample Sampleton</a></p>
+            <button type="submit" class="email" name="email">Email</button>
+        </div>
         {% for profile in results %}
         <div class="search_result">
-            <img src="" alt="profile_pic">
+            <img class="profile_pic" src="{{user_profile_pic}}" alt="profile_pic">
             <h4>
                 <a href="user.profile">{{search.tutor.first_name}} {{search.tutor.last_name}}</a>
             </h4>
