--- a/main/apps/nip/templates/nip/help_search.html
+++ b/main/apps/nip/templates/nip/help_search.html
@@ -33,14 +33,24 @@
         height:100px;
         margin-top:10px;
     }
-	p{
-		display: inline-block;
-	}
+
 	 .main_content{
         /* width:700px; */
         margin-top:50px;
         margin-left:300px;
     }
+	.search_result{
+		display: inline-block;
+		text-align: center;
+		vertical-align: middle;
+		line-height: 90px;
+		position: absolute;
+		margin-left:20px;
+	}
+
+	.results{
+		height:100px;
+	}
 </style>
 <body>
 	<img class="logo" src="https://mir-cdn.behance.net/v1/rendition/project_modules/disp/70702f63826029.5abd519e04f31.png" alt="nip_logo"
@@ -54,16 +64,17 @@
 	<div class="main_content">
 		<h3>Ninjas who can help you in {TIME} for {PROBLEM}</h3>
 		<div class="results">
-			<div class="search_result">
+			<div >
+				<img class="profile_pic" src="http://www.thelaunchpod.com/wp-content/uploads/2015/02/circular-headshot-.png" alt="profile_pic">
+				<p class="search_result">{NAME} <a href="#">Contact</a></p>
+				
+			</div>
+		</div>
+			<!-- <div class="search_result">
 				<img class="profile_pic"src="http://www.thelaunchpod.com/wp-content/uploads/2015/02/circular-headshot-.png">
 				<p>{NAME}</p>
 				<a href="#">Contact</a>
-			</div>
-			<div class="search_result">
-				<img class="profile_pic"src="http://www.thelaunchpod.com/wp-content/uploads/2015/02/circular-headshot-.png">
-				<p>{NAME}</p>
-				<a href="#">Contact</a>
-			</div>
-	</div>
+			</div> -->
+	
 </body>
 </html>
